feat: agregar encabezado de tarjeta para mostrar la ruta del archivo en la galería de fotos

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -14,6 +14,9 @@ imp
       <ion-col size="6" *ngFor="let photo of photoService.photos; index as position">
         <ion-card>
           <img [src]="photo.webviewPath" />
+          <ion-card-header>
+            <ion-card-subtitle>{{photo.filepath}}</ion-card-subtitle>
+          </ion-card-header> 
         </ion-card>
       </ion-col>
     </ion-row>
