feat: migrar la galería de fotos de Tab2 a Tab3 y restaurar Tab2 a su estado por defecto

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -2,7 +2,7 @@ imp
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Photo Gallery
+      Tab 2
     </ion-title>
   </ion-toolbar>
 </ion-header>
